// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<span
  className="Tag flex-row"
  onClick={null}
>
  test
</span>
`;

exports[`matches enzyme snapshots matches snapshot 2`] = `
<span
  className="Tag flex-row highlighted"
  onClick={null}
>
  test
</span>
`;
